# Graph-Visualizer

./: .gitignore  README.md  setup.py  tree_view_data.yaml
.github/workflows/: django.yml  tests.yml
block_visualizer_plugin/: pyproject.toml
block_visualizer_plugin/src/: block_visualizer.py
block_visualizer_plugin/src/block_visualizer_plugin/: block_visualizer.py
block_visualizer_plugin/src/template/: block_visualizer_template.jinja2
graph_visualizer_api/: pyproject.toml
graph_visualizer_api/src/graph_visualizer_api/: datasource.py  main.py  visualizer.py
graph_visualizer_api/src/graph_visualizer_api/model/: edge.py  exceptions.py  filter.py  graph.py  node.py  tree.py
graph_visualizer_api/tests/: test_graph.py  test_tree.py
graph_visualizer_core/: manage.py  pyproject.toml
graph_visualizer_core/graph_visualizer_core/: asgi.py
graph_visualizer_core/src/: manage.py
graph_visualizer_core/src/graph_visualizer_core/: settings.py  urls.py  wsgi.py
graph_visualizer_core/src/graphvisualizer/: apps.py  views.py
graph_visualizer_core/src/visualizer/: apps.py  urls.py  views.py
graph_visualizer_core/src/visualizer/templates/visualizer/: base.html  config.html  index.html  visualization.html  workspace.html
graph_visualizer_platform/: pyproject.toml
graph_visualizer_platform/src/: visualization.html
graph_visualizer_platform/src/graph_visualizer_platform/: exceptions.py  filter_strategies.py  main.py  plugins.py  singleton.py  store.py  tempCodeRunnerFile.py  tree_view.py  tree_view_data.json  workspaces.py
graph_visualizer_platform/tests/: test_store.py  test_workspaces.py
html_data_source_plugin/: pyproject.toml
html_data_source_plugin/src/html_data_source_plugin/: configuration.py  datasource.py  main.py  provider.py
json_data_source_plugin/: data.json  pyproject.toml  relations.txt
json_data_source_plugin/src/json_data_source_plugin/: datasource.py  json_data_source_plugin\data.json  main.py  provider.py
simple_view_visualizer_plugin/: __init__.py
simple_view_visualizer_plugin/static/simple_view_visualizer_plugin/: simple_view.css
simple_view_visualizer_plugin/template/simple_view_visualizer_plugin/: simple_view.html
simple_view_visualizer_plugin/tests/: test_simple_view_plugin.py
simple_visualizer_plugin/: pyproject.toml  simple_visualizer.py
simple_visualizer_plugin/src/: simple_visualizer.py
simple_visualizer_plugin/src/simple_visualizer_plugin/: __init__.py  simple_visualizer.py
simple_visualizer_plugin/src/static/: d3.js  styles.css
simple_visualizer_plugin/src/template/simple_visualizer_plugin/: simple_visualizer_template.jinja2
simple_visualizer_plugin/template/simple_visualizer_plugin/: simple_visualizer_template.jinja2
simple_visualizer_plugin/tests/: test_simple_visualizer.py
