[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "html_data_source_plugin"
authors = [
    { name = "Vladislav Radović", email = "radovic.sv27.2021@uns.ac.rs" },
]
description = "HTML Data Source Plugin for Graph Visualizer"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "beautifulsoup4",
    "graph_visualizer_api",
    "requests",
    "urllib3",
]
dynamic = ["version"]